[package]
name = "trip"
version = "0.1.10"
authors = ["Will Alexander <wwalexander@users.noreply.github.com>"]
description = "Finds tripcodes that contain patterns"
repository = "https://github.com/wwalexander/trip"
readme = "README.md"
categories = ["command-line-utilities", "cryptography"]
license = "MIT/Apache-2.0"

[dependencies]
rand = "0.3"