[package]
name = "trip"
version = "1.0.0"
authors = ["Will Alexander <wwalexander@users.noreply.github.com>"]
description = "Finds tripcodes that contain patterns"
repository = "https://github.com/wwalexander/trip"
readme = "README.md"
categories = ["command-line-utilities", "cryptography"]
license = "MIT/Apache-2.0"

[dependencies.rand]
git = "https://github.com/rust-lang-nursery/rand"
tag = "0.5.0-pre.0"
